
Tue Nov  4 15:18:17 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Process_Test.cpp: Added a new test that exercises the new
          handle inheritance mechanisms of ACE_Process.  Thanks to
          Christian Fromme <kaner at strace dot org> for contributing this
          test.

Tue Nov  4 14:15:07 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/tests.mpc: 
        * tests/run_test.lst (Process_Test): Added the new test for the
          ACE_Process class. 

Tue Nov  4 13:59:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Added isblank test for space

        * ace/OS_NS_ctype.inl:
          Fixed bug in isblank for space

Tue Nov  4 13:39:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a few tests for labview and add !WinCE to all
          !LabVIEW_RT marked tests so that we can start testing
          for wince

Tue Nov  4 08:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_ctype.inl:
          Added support for ACE_LACKS_ISASCII

        * ace/config-vxworks6.2.h
        * ace/config-vxworks6.3.h
        * ace/config-vxworks6.4.h
          Define for ACE_LACKS_ISASCII for rtp

Tue Nov  4 07:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.5.h:
          Added ACE_LACKS_ISCTYPE/ACE_LACKS_ISBLANK

        * ace/config-sunos5.10.h:
          SunOS 10 has isblank

Tue Nov  4 07:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-cygwin32.h:
          Added ACE_LACKS_ISCTYPE

Tue Nov  4 07:05:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-aix-5.x.h:
          Added ACE_HAS_CTYPE_T

Mon Nov  3 20:05:10 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-leopard.h:
          Added ACE_ISCTYPE_EQUIVALENT.
